fixed post form alignment

--- a/index.css
+++ b/index.css
@@ -296,15 +296,15 @@ body .wrapper {
 
 #createpost-form{
     visibility: hidden;
-    position: absolute;
+    position: relative;
     width: 1000px;
     height: 650px;
-    margin-left: 370px;
-    position: absolute;
+    margin: auto;
     top: 15%;
     background-color: #3bc98e;
     border: 4px solid #249e6b;
     border-radius: 25px;
+    bottom: 300px;
 }
 
 .header-post{
